Add class-file format to the file properties sheet
 - will now display the class-file version and the preview flag in
   the file properties table
 - little cleanup in the touched file